fix: review comments
Signed-off-by: Kamil MARUT <kolomenek@gmail.com>